Bug 1452525 - Deduplicate proto bindings, not bindings. r=xidorn, a=RyanVM

MozReview-Commit-ID: 2NWALzUhDjn