layout/style/ServoStyleSet.cpp
@@ -259,11 +259,9 @@ ServoStyleSet::InvalidateStyleForDocumentStateChanges(EventStates aStatesChanged
     nonDocumentStyles.AppendElement(aShadowRoot.ServoStyles());
   });
 
-  // FIXME(emilio): When bug 1425759 is fixed we need to enumerate ShadowRoots
-  // too.
-  mDocument->BindingManager()->EnumerateBoundContentBindings(
-    [&](nsXBLBinding* aBinding) {
-      if (auto* authorStyles = aBinding->PrototypeBinding()->GetServoStyles()) {
+  mDocument->BindingManager()->EnumerateBoundContentProtoBindings(
+    [&](nsXBLPrototypeBinding* aProto) {
+      if (auto* authorStyles = aProto->GetServoStyles()) {
         nonDocumentStyles.AppendElement(authorStyles);
       }
       return true;
@@ -295,9 +293,9 @@ ServoStyleSet::MediumFeaturesChanged(MediaFeatureChangeReason aReason)
   });
 
   // FIXME(emilio): This is broken for XBL. See bug 1406875.
-  mDocument->BindingManager()->EnumerateBoundContentBindings(
-    [&](nsXBLBinding* aBinding) {
-      if (auto* authorStyles = aBinding->PrototypeBinding()->GetServoStyles()) {
+  mDocument->BindingManager()->EnumerateBoundContentProtoBindings(
+    [&](nsXBLPrototypeBinding* aProto) {
+      if (auto* authorStyles = aProto->GetServoStyles()) {
         nonDocumentStyles.AppendElement(authorStyles);
       }
       return true;
@@ -1315,12 +1313,12 @@ ServoStyleSet::EnsureUniqueInnerOnCSSSheets()
     }
   });
 
-  mDocument->BindingManager()->EnumerateBoundContentBindings(
-      [&](nsXBLBinding* aBinding) {
+  mDocument->BindingManager()->EnumerateBoundContentProtoBindings(
+      [&](nsXBLPrototypeBinding* aProto) {
         AutoTArray<StyleSheet*, 3> sheets;
-        aBinding->PrototypeBinding()->AppendStyleSheetsTo(sheets);
+        aProto->AppendStyleSheetsTo(sheets);
         for (auto* sheet : sheets) {
-          queue.AppendElement(MakePair(sheet, SheetOwner { aBinding->PrototypeBinding() }));
+          queue.AppendElement(MakePair(sheet, SheetOwner { aProto }));
         }
         return true;
       });
@@ -1529,9 +1527,9 @@ ServoStyleSet::UpdateStylist()
       Servo_AuthorStyles_Flush(aShadowRoot.ServoStyles(), mRawSet.get());
     });
 
-    mDocument->BindingManager()->EnumerateBoundContentBindings(
-      [&](nsXBLBinding* aBinding) {
-        if (auto* authorStyles = aBinding->PrototypeBinding()->GetServoStyles()) {
+    mDocument->BindingManager()->EnumerateBoundContentProtoBindings(
+      [&](nsXBLPrototypeBinding* aProto) {
+        if (auto* authorStyles = aProto->GetServoStyles()) {
           Servo_AuthorStyles_Flush(authorStyles, mRawSet.get());
         }
         return true;
